--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ochuzor/todo.txt-indexer": "^4.1.0",
+    "@ochuzor/todo.txt-parser": "^3.2.2",
+    "@ochuzor/todo.txt-store": "^3.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
